--- a/src/app/game/game-detail/game-detail.component.html
+++ b/src/app/game/game-detail/game-detail.component.html
@@ -7,6 +7,14 @@
     </div>
   </div>
   <div class="text-center">
+    <h1 class="text-center roboto-slab-title">{{ gameDetail.name }}</h1>
+  </div>
+  <div class="text-center">
+    <h1 class="text-center roboto-slab-title">
+      -------------------------------------------------
+    </h1>
+  </div>
+  <div class="text-center">
     <img [src]="gameDetail.imageUrl" class="rounded" />
   </div>
   <div class="container-fluid text-center mt-3" style="width: 600px">
