slight progress for add games

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Marco Games</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -26,7 +26,6 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Games</a></li>
-            <li><a class="dropdown-item" href="#">Developers</a></li>
             <li><hr class="dropdown-divider" /></li>
             <li><a class="dropdown-item" href="#">About Us</a></li>
           </ul>
