--- a/src/app/game/add-game/add-game.component.html
+++ b/src/app/game/add-game/add-game.component.html
@@ -53,6 +53,24 @@
           <option *ngFor="let developer of developerList" [value]="developer.id"> {{ developer.name }}</option>
         </select>
       </div>
+      <div class="mx-auto bg-secondary" style="width: 80%">
+        <label for="developerId" class="form-label">Genre</label>
+      </div>
+      <div class="mx-auto mb-3 bg-secondary" style="width: 80%">
+        
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">1</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+          <label class="form-check-label" for="inlineCheckbox2">2</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+          <label class="form-check-label" for="inlineCheckbox3">3</label>
+        </div>
+      </div>
     </form>
     <button type="button" class="btn btn-success" (click)="submitGame()">Add Game!</button>
   </div>
