--- a/src/app/game/add-game/add-game.component.html
+++ b/src/app/game/add-game/add-game.component.html
@@ -56,19 +56,11 @@
       <div class="mx-auto bg-secondary" style="width: 80%">
         <label for="developerId" class="form-label">Genre</label>
       </div>
-      <div class="mx-auto mb-3 bg-secondary" style="width: 80%">
-        
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-          <label class="form-check-label" for="inlineCheckbox1">1</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-          <label class="form-check-label" for="inlineCheckbox2">2</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-          <label class="form-check-label" for="inlineCheckbox3">3</label>
+      <div class="mx-auto mb-3 bg-secondary" style="width: 80%" *ngIf="isGenreListPopulated">
+        <div *ngFor="let genre of codeGenreList">
+          <label>
+            <input type="checkbox" formControlName="{{ genre.code }}" (change)="updateConcatenatedCodeGenre()">{{ genre.decodeValue }}
+          </label>
         </div>
       </div>
     </form>
