--- a/src/app/game/add-game/add-game.component.html
+++ b/src/app/game/add-game/add-game.component.html
@@ -6,11 +6,11 @@
   </div>
 </div>
 <div
-  class="container-fluid text-center mt-3 bg-info border border-dark rounded"
+  class="container-fluid mt-3 bg-info border border-dark rounded"
   style="width: 800px"
 >
-  <div class="container-fluid text-center mt-3 bg-info" style="width: 700px">
-    <form [formGroup]="gameSubmissionForm">
+  <div class="container-fluid mt-3 bg-info" style="width: 700px">
+    <form [formGroup]="gameSubmissionForm" class="text-center">
       <div class="row mb-3">
         <div class="text-left">
           <label class="col-form-label"
@@ -91,25 +91,27 @@
       </div>
     </form>
     <form [formGroup]="codesTableGenreSubmissionForm">
-      <div class="mx-auto bg-info" style="width: 100%">
+      <div class="mx-auto">
         <label for="concatenatedCodeGenre" class="form-label"
           >Genre<span class="text-danger">*</span></label
         >
       </div>
       <div
-        class="d-flex flex-column justify-content-evenly bg-info"
-        style="width: 100%"
+        class="genre-container text-left"
       >
         <div
           *ngFor="let genre of codeGenreList"
-          class="d-flex flex-row justify-content-evenly"
+          class="genre"
         >
-          <label>
-            <input
-              type="checkbox"
-              formControlName="{{ genre.code }}"
-              (change)="updateConcatenatedCodeGenre()"
-            />{{ genre.decodeValue }}
+        <input
+        type="checkbox"
+        formControlName="{{ genre.code }}" 
+        id="{{ genre.code }}"
+        (change)="updateConcatenatedCodeGenre()"
+        
+        />
+        <label for="{{ genre.code }}" class="genre-text">
+            {{genre.decodeValue}}
           </label>
         </div>
       </div>
