--- a/src/app/game/add-game/add-game.component.scss
+++ b/src/app/game/add-game/add-game.component.scss
@@ -1,19 +1,30 @@
-.genre-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+.checkbox-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
-.genre {
-    margin: 5px 0px;
-    padding: 0px 5px;
-    display: inline-block;
-    min-width: 50%;
+.checkboxlist {
+  margin: 5px 0px;
+  padding: 0px 5px;
+  display: inline-block;
+  min-width: 50%;
 }
 
-.genre-text {
-    // inline-size: 90%;
-    margin-left: 5px;
-    overflow-wrap: break-word;
-    hyphens: manual;
+.checkbox-text {
+  // inline-size: 90%;
+  margin-left: 5px;
+  overflow-wrap: break-word;
+  hyphens: manual;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  appearance: textfield;
+  -moz-appearance: textfield;
 }
