--- a/src/app/game/developer/developer.component.html
+++ b/src/app/game/developer/developer.component.html
@@ -32,7 +32,7 @@
           class="btn addbtn btn-success"
           data-bs-toggle="modal"
           data-bs-target="#developerUpdateModal"
-          (click)="assignDeleteDeveloperId(developer.id)"
+          (click)="obtainDeveloperDetailsForUpdate(developer.id)"
         >
           <i class="fa fa-pencil"></i>
         </button>
@@ -51,7 +51,84 @@
   </tbody>
 </table>
 
-<!-- Modal - Add Developer -->
+<!-- Modal - Update Developer -->
+
+<div
+  class="modal fade"
+  id="developerUpdateModal"
+  tabindex="-1"
+  aria-labelledby="developerLabel"
+  aria-hidden="true"
+>
+  <div
+    class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg"
+  >
+    <div class="modal-content decorate-modal">
+      <div class="modal-header">
+        <h5 class="modal-title" id="blogModalLabel">Update Developer</h5>
+        <button
+          (click)="onClose()"
+          type="button"
+          id="close-update-developer"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="developerUpdateForm">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="col-form-label"
+                  >Name <span class="text-danger">*</span></label
+                >
+                <input
+                  type="text"
+                  formControlName="name"
+                  class="form-control"
+                />
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="col-form-label">Slogan </label>
+                <input
+                  type="text"
+                  formControlName="slogan"
+                  class="form-control"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="col-form-label">Logo </label>
+                <input
+                  type="text"
+                  formControlName="logo"
+                  class="form-control"
+                />
+              </div>
+            </div>
+          </div>
+        </form>
+        <div class="text-center mt-5">
+          <button
+            type="button"
+            class="btn btn-success"
+            (click)="updateSelectedDeveloper()"
+          >
+            Update Developer
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal - Delete Developer -->
 
 <div
   class="modal fade"
