--- a/src/app/game/update-game/update-game.component.html
+++ b/src/app/game/update-game/update-game.component.html
@@ -1,22 +1,20 @@
 <div class="page-header d-flex justify-content-between align-items-center">
   <div class="page-header text-dark">
-    <button (click)="seeGameList()" class="btn btn-success mt-2">
-      Return to Games
-    </button>
+    <button class="btn btn-success mt-2">Return to Games</button>
   </div>
 </div>
 <div
   class="container-fluid mt-3 roboto-slab-title text-center"
   style="width: 800px"
 >
-  <h1 class="text-center roboto-slab-title">Add New Game</h1>
+  <h1 class="text-center roboto-slab-title">Update Game</h1>
 </div>
 <div
-  class="container-fluid mt-3 bg-info border border-dark rounded"
+  class="container-fluid mt-3 update-form border border-dark rounded"
   style="width: 800px"
 >
-  <div class="container-fluid mt-3 bg-info" style="width: 700px">
-    <form [formGroup]="gameSubmissionForm" class="text-center">
+  <div class="container-fluid mt-3" style="width: 700px">
+    <form [formGroup]="gameUpdateForm" class="text-center">
       <div class="row mb-3">
         <div class="text-left">
           <label class="col-form-label"
@@ -107,7 +105,7 @@
         </select>
       </div>
     </form>
-    <form [formGroup]="codesTableGenreSubmissionForm">
+    <form [formGroup]="codesTableGenreUpdateForm">
       <div class="mx-auto">
         <label for="concatenatedCodeGenre" class="form-label"
           >Genre<span class="text-danger">*</span></label
@@ -127,7 +125,7 @@
         </div>
       </div>
     </form>
-    <form [formGroup]="codesTablePlatformSubmissionForm">
+    <form [formGroup]="codesTablePlatformUpdateForm">
       <div class="mx-auto">
         <label for="concatenatedCodePlatform" class="form-label"
           >Platform<span class="text-danger">*</span></label
@@ -148,8 +146,8 @@
       </div>
     </form>
     <div class="mx-auto mt-3" style="width: 20%">
-      <button type="button" class="btn btn-success" (click)="submitGame()">
-        Add Game!
+      <button type="button" class="btn btn-info" (click)="updateGame()">
+        Update Game!
       </button>
     </div>
   </div>
