added patch values

--- a/src/app/game/update-game/update-game.component.html
+++ b/src/app/game/update-game/update-game.component.html
@@ -1,6 +1,8 @@
 <div class="page-header d-flex justify-content-between align-items-center">
   <div class="page-header text-dark">
-    <button class="btn btn-success mt-2">Return to Games</button>
+    <button class="btn btn-success m-2" (click)="returnToViewGame()">
+      Game Details
+    </button>
   </div>
 </div>
 <div
